# pi-from-hungry

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENT.md  LICENSE  README.md  abi-hunger-agent.json  docker-compose.yml  hardhat.config.ts  hotspots_detectados.json  package-lock.json  package.json  railway.json  render.yaml  scanner-rpc.js  tsconfig.json
backend-ia/: blockchain-registration.json  detector-fome.py  hotspots_detectados.json  integrar-blockchain.py  payloads_prontos.json
contracts/: Cargo.toml  HungerReliefAgent.rs  HungerReliefAgent.sol  README.md
contracts/src/: lib.rs
dashboard/: Dockerfile  ENTERPRISE_PLAN.md  README.md  package-lock.json  package.json
data/: curated-hotspots.json  demo-hotspots.json  hotspot-history.json  indexed-events.json  pipeline-http-cache.json  pipeline-source-audit.json
deployments/: latest-deployment.json
docs/: ARQUITETURA_SOROBAN.md  DEPLOY_PUBLIC_DEMO.md  ENVIRONMENT_REFERENCE.md  FINAL_DEPLOY_RUNBOOK.md  METHODOLOGY_V1.md  PI_APP_STUDIO_SETUP.md  PLANO_EXECUCAO_7_DIAS.md  PRONTO_VS_PENDENTE.md  PUBLIC_LAUNCH_CHECKLIST.md  PUBLISH_MESSAGE_TEMPLATES.md  ROADMAP_TECNICO.md  SETUP_RUST_SOROBAN.md  SHOWCASE_SCRIPT.md  SOROBAN_WORKFLOW.md  TECHNICAL_AUDIT_2026-04-02.md  TESTNET_REAL_CONTRACT_SETUP.md  VERCEL_RENDER_DEPLOY_STEPS.md
scripts/: check-public-demo.ts  deploy-pi.ts  deploy-soroban.ts  invoke-soroban.ts  prepare-soroban-deploy.ts  soroban-donate-simulate.ts  soroban-events.ts  soroban-get-donation.ts  soroban-register-simulate.ts  soroban-summary.ts  soroban-xdr-preview.ts
(+160 files in other folders)
