[package]
name = "hunger-relief-agent"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Pi From Hungry canonical Soroban contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.0.0"

[dev-dependencies]
soroban-sdk = { version = "23.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[features]
default = []
